[package]
name = "accounting"
version = "0.0.1"
description = "Finance software"
authors = ["lynx"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = ["prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "sqlite",
    "migrations",
    "mocking",
], default-features = false }
tokio = { version = "1.37.0", features = ["macros"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
pretty_env_logger = "0.5.0"
log = "0.4"
thiserror = "1.0.63"
platform-dirs = "0.3.0"
anyhow = "1.0.86"
bcrypt = "0.15.1"
# specta = "=2.0.0-rc.12"
# tauri-specta = { version = "=2.0.0-rc.11", features = ["javascript", "typescript"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
